[package]
name = "ev-charging-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.21", features = ["rt-multi-thread", "macros"] }
reqwest = {version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"